# abrlib

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  dockerize-it  env.sh  run_tests.py
.circleci/: config.yml
CI/x64/: run_tests.py
CI_scripts/: cppcheck_check.py  dev_quick_check.py  environment_check.py  example_run.py  library_build.py  uncrustify_check.py  unittests_run.py  utils.py  wrappers_check.py
example/: CMakeLists.txt  README.md  setup.sh
example/src/: example.c
include/: abr.h  abrlib.h  abruslib.h
src/: abr.c  abr_priv.h  abrlib.c  abrlib_priv.h  abruslib.c  abruslib_priv.h
src/port/: memory_mgmt.c  memory_mgmt.h
tests/unit/: CMakeLists.txt  setup.sh
tests/unit/src/: tests.cpp
tools/: trigger_pipeline.py
tools/cppcheck/: cppcheck-it
tools/uncrustify/: uncrustify-it  uncrustify.cfg
wrappers/python2/: README.md  abruslib.py  example.py
wrappers/python3/: README.md  abrlib.py  abruslib.py  example.py
